--- a/about.html
+++ b/about.html
@@ -2,143 +2,159 @@
 <html lang="en">
 <head>
 
-    <!-- ===========================
-         META & PAGE SETTINGS
-    ============================ -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- ===========================
-         PAGE TITLE
-    ============================ -->
-    <title>About</title>
+    <title>Adult Items</title>
 
-    <!-- ===========================
-         STYLESHEETS
-    ============================ -->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <!-- Your external stylesheet -->
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
 
-<!-- ===========================
-     SITE HEADER
-============================ -->
 <header class="site-header">
     <div class="site-header-inner">
 
-        <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/images/logo.png" alt="Selfary Expression logo" class="site-logo">
             </a>
         </div>
 
-        <!-- Navigation -->
-        <nav class="site-nav">
+        <a href="cart.html" class="floating-cart">
+            🛒
+            <span class="cart-badge" id="cart-count">0</span>
+        </a>
 
-            <!-- Mobile Menu Toggle -->
+        <nav class="site-nav">
             <button class="nav-toggle" aria-label="Open menu">
-                <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                <svg width="24" height="24" viewBox="0 0 24 24">
                     <path d="M4 7.5h16v1.5H4z"></path>
                     <path d="M4 15h16v1.5H4z"></path>
                 </svg>
             </button>
 
-            <!-- Main Menu -->
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="employer-search.html">Employer Search</a></li>
-                <li><a href="hiring-ethics-articles.html">Hiring Ethics Articles</a></li>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
 
+                <li class="has-submenu">
+                    <span class="submenu-label">Educational Items</span>
+                    <button class="submenu-toggle"><svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg></button>
+                    <ul class="submenu">
+                        <li><a href="Endangered Species.html">Endangered Species</a></li>
+                        <li><a href="Flags.html">Flags</a></li>
+                        <li><a href="Maps.html">Maps</a></li>
+                    </ul>
+
+                    <span class="submenu-label">Self-Expressive Items</span>
+                    <button class="submenu-toggle"><svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg></button>
+                    <ul class="submenu">
+                        <li><a href="Adult Experience.html">Adult Experience</a></li>
+                        <li><a href="Inner Child.html">Inner Child</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="Articles.html">Articles</a></li>
+            </ul>
         </nav>
 
     </div>
 </header>
 
 
-<!-- ===========================
-     MAIN CONTENT
-============================ -->
 <main id="main">
     <div class="content">
 
-        <!-- Page Heading --> 
-        <h2 class="about-heading">I'm Tempest</h2>
+        <h2 class="about-heading">Welcome Self-Expressive Peeps</h2>
 
-        <!-- About Photo -->
-        <figure class="about-photo">
-            <img src="/IMAGES/about_photo.jpg" alt="About page photo">
+        <figure class="home">
+            <img src="/images/home.png" alt="Home">
         </figure>
 
-        <!-- About Text -->
+        <p>Free will is the purpose of our experiences...</p>
 
-        <p>I created Selfary to be a non-profit caring about changing the robotic hiring practices online that have caused the personal touch of hiring to be lost because everything is automated and behind computer screens.</p>
+        <ol>
+            <li>Educational Items...</li>
+            <li>Self-Expressive Adult Items...</li>
+            <li>Self-Expressive Inner Child Items...</li>
+        </ol>
 
-        <p>I have years of experience in Human Resources, working with HRIS implementation, data analysis, administration, training, and onboarding/recruiting. I started with Human Resources when I was 19 years old and continue to do this work outside of this non-profit as well.</p>
+        <!-- FILTERS -->
+        <div class="filter-container">
+            <select id="filter-category">
+                <option value="all">All Categories</option>
+                <option value="adult">Adult</option>
+                <option value="inner-child">Inner Child</option>
+            </select>
+        </div>
 
-        <p>I also have experience with understanding how hiring processes within businesses – big and small – are affecting everyday people because of the carelessness of people’s time and experiences. This then causes carelessness on the employee’s end because of businesses carelessness to begin with. And the cycle repeats.</p>
+        <!-- GALLERY -->
+        <div id="gallery" class="gallery"></div>
 
-        <p>This is not sustainable ethically. Humanity will be lost due to carelessness, which turns into purposeless and worthlessness, <strong>unless</strong> a shift starts happening. Big time. </p>
-
-        <p>My purpose with Selfary is to lead people to work towards shifting our online hiring practices from carelessness to care. With that in mind, I created this business as a non-profit because of the unethical aspects of non-profits themselves too. To read articles that are about experiences and ethics regarding hiring practices, including business expenditures, feel free to view the Hiring Ethics articles.</p>
-
-        <p>You can also see more about me on <a href="https://www.instagram.com/mebeingtempest">Instagram</a>. </p>
-        
-        <p>Email: <a href="mailto:mebeingtempest@yahoo.com">Contact Tempest</a>  - An actual response from me (Tempest) will be given on a case-by-case basis but typically they are within 2-3 business days. </p>
-
-        <p>Note: All parties associated with Selfary are not responsible for inaccuracies within this website. This website is coded by me (and help from Co-pilot), but it is a simple layout for many reasons. </p>
-
-        <p>For Donations click <a href="https://donate.stripe.com/00w9AVb4vcmk1DK7ci6kg00">HERE</a>. They are the only source of reveune for Selfary at this time. </p>
-
-        <p>– Tempest –</p>
+        <button id="loadMore">Load More Photos</button>
 
     </div>
 </main>
 
+<!-- LIGHTBOX -->
+<div id="lightbox" class="lightbox-overlay">
+    <div class="lightbox-close" onclick="closeLightbox()">×</div>
+    <div class="lightbox-content">
+        <img id="lightbox-img" src="" alt="">
+        <div id="lightbox-caption" class="lightbox-caption"></div>
+    </div>
+</div>
 
-<!-- ===========================
-     FOOTER
-============================ -->
+
 <footer class="site-footer">
     <div class="footer-inner">
-
-        <p class="footer-copy">
-            © 2025 Selfary. All rights reserved.
-        </p>
-
+        <p>Questions?</p>
+        <ol>
+            <li>Email: selfaryexpression@yahoo.com</li>
+            <li>Responses are sent within 1 business day.</li>
+            <li>Calls are only given on a case-by-case basis.</li>
+        </ol>
+        <p class="footer-copy">© 2025-2026 Selfary Expression. All rights reserved.</p>
     </div>
 </footer>
 
 
-<!-- ===========================
-     SCRIPTS
-============================ -->
+<!-- PAGE-SPECIFIC PHOTO LIST -->
 <script>
-document.addEventListener("DOMContentLoaded", function () {
+/* -----------------------------------------
+   Adult Items – Manual Photo List (OPTION D)
+----------------------------------------- */
+const photos = [
+  {
+    src: "/images/adult-items/pic1.webp",
+    caption: "Red Lace Set",
+    price: 29.99,
+    category: "adult"
+  },
+  {
+    src: "/images/adult-items/pic2.webp",
+    caption: "Black Silk Robe",
+    price: 39.99,
+    category: "adult"
+  },
+  {
+    src: "/images/adult-items/pic3.webp",
+    caption: "Playful Plush Toy",
+    price: 19.99,
+    category: "inner-child"
+  }
 
-    // Mobile menu toggle
-    const navToggle = document.querySelector(".nav-toggle");
-    const navMenu = document.querySelector(".nav-menu");
-
-    navToggle.addEventListener("click", () => {
-        navMenu.classList.toggle("open");
-    });
-
-    // Submenu toggles
-    const submenuToggles = document.querySelectorAll(".submenu-toggle");
-
-    submenuToggles.forEach(toggle => {
-        toggle.addEventListener("click", (e) => {
-            e.preventDefault();
-            const submenu = toggle.nextElementSibling;
-            submenu.classList.toggle("open");
-        });
-    });
-
-});
+  // Add more items here...
+];
 </script>
+
+<!-- SHARED GALLERY SCRIPT -->
+<script src="/js/gallery.js"></script>
+
+<!-- FLOATING CART -->
+<script src="floating-cart.js"></script>
 
 </body>
 </html>
